// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarkdownProcessor > convertMarkdownToJSON > should correctly process hierarchical lists with personal reflections 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "personal",
          "subentries": [],
          "tag": "h2",
          "text": "personal",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "personal",
          "subentries": [],
          "tag": "ul",
          "text": "Perfectionism",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "personal",
          "subentries": [
            {
              "isComplete": false,
              "isTask": false,
              "section": "Overthinking, analysis paralysis, fear of failure",
              "subentries": [],
              "tag": "ul",
              "text": "decrease my playfulness.",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Overthinking, analysis paralysis, fear of failure",
              "subentries": [],
              "tag": "ul",
              "text": "decreases poor decision-making",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Overthinking, analysis paralysis, fear of failure",
              "subentries": [],
              "tag": "ul",
              "text": "decreases action-taking",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Overthinking, analysis paralysis, fear of failure",
              "subentries": [],
              "tag": "ul",
              "text": "reinforces personal beliefs instead of increasing objective truth",
            },
          ],
          "tag": "ul",
          "text": "Overthinking, analysis paralysis, fear of failure",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "personal",
          "subentries": [
            {
              "isComplete": false,
              "isTask": false,
              "section": "Fear of judgement",
              "subentries": [],
              "tag": "ul",
              "text": "desire to be seen as correct instead of desire to be effective",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Fear of judgement",
              "subentries": [],
              "tag": "ul",
              "text": "many judgments should be ignored because they lack sincerity",
            },
          ],
          "tag": "ul",
          "text": "Fear of judgement",
        },
      ],
      "date": undefined,
      "filename": "personal-reflections.md",
      "frontmatter": undefined,
      "heading": "personal",
    },
  ],
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should detect tasks and their completion status 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "tasks",
          "subentries": [],
          "tag": "h1",
          "text": "Tasks",
        },
        {
          "isComplete": false,
          "isTask": true,
          "section": "tasks",
          "subentries": [],
          "tag": "ul",
          "text": "Incomplete task",
        },
        {
          "isComplete": true,
          "isTask": true,
          "section": "tasks",
          "subentries": [],
          "tag": "ul",
          "text": "Complete task",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Tasks",
    },
  ],
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should extract metadata from content 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "meeting notes",
          "subentries": [],
          "tag": "h1",
          "text": "Meeting Notes",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "meeting notes",
          "subentries": [],
          "tag": "p",
          "text": "Meeting with John Smith in New York about #project planning.",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Meeting Notes",
    },
  ],
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should handle nested lists properly 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "nested list",
          "subentries": [],
          "tag": "h1",
          "text": "Nested List",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "nested list",
          "subentries": [
            {
              "isComplete": false,
              "isTask": false,
              "section": "Fruits:",
              "subentries": [],
              "tag": "ul",
              "text": "Apples",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Fruits:",
              "subentries": [],
              "tag": "ul",
              "text": "Bananas",
            },
          ],
          "tag": "ul",
          "text": "Fruits:",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "nested list",
          "subentries": [
            {
              "isComplete": false,
              "isTask": false,
              "section": "Vegetables:",
              "subentries": [],
              "tag": "ul",
              "text": "Carrots",
            },
            {
              "isComplete": false,
              "isTask": false,
              "section": "Vegetables:",
              "subentries": [],
              "tag": "ul",
              "text": "Broccoli",
            },
          ],
          "tag": "ul",
          "text": "Vegetables:",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Nested List",
    },
  ],
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should process headings properly 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "heading 1",
          "subentries": [],
          "tag": "h1",
          "text": "Heading 1",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "heading 1",
          "subentries": [],
          "tag": "p",
          "text": "Paragraph under heading 1",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Heading 1",
    },
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "heading 2",
          "subentries": [],
          "tag": "h2",
          "text": "Heading 2",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "heading 2",
          "subentries": [],
          "tag": "p",
          "text": "Paragraph under heading 2",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Heading 2",
    },
  ],
}
`;

exports[`MarkdownProcessor > convertMarkdownToJSON > should process lists correctly 1`] = `
{
  "entries": [
    {
      "content": [
        {
          "isComplete": false,
          "isTask": false,
          "section": "shopping list",
          "subentries": [],
          "tag": "h1",
          "text": "Shopping List",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "shopping list",
          "subentries": [],
          "tag": "ul",
          "text": "Apples",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "shopping list",
          "subentries": [],
          "tag": "ul",
          "text": "Bananas",
        },
        {
          "isComplete": false,
          "isTask": false,
          "section": "shopping list",
          "subentries": [],
          "tag": "ul",
          "text": "Milk",
        },
      ],
      "date": undefined,
      "filename": "test.md",
      "frontmatter": undefined,
      "heading": "Shopping List",
    },
  ],
}
`;
